# Amadeus

./: .gitignore  README.md  SENSEVOICE_SETUP.md  build.gradle  settings.gradle
app/: build.gradle
app/libs/: Amadeus-master.code-workspace
app/libs/aar_extract/: AndroidManifest.xml
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml  new.sh
app/src/main/assets/tts/vits-melo-tts-zh_en/: tokens.txt
app/src/main/assets/vits_ja/: README.txt  config.json
app/src/main/cpp/: CMakeLists.txt  vitsncnn_jni.cpp
app/src/main/cpp/openjtalk/mecab/: dictionary.cpp
app/src/main/cpp/vits/: SynthesizerTrn.cpp  utils.cpp  utils.h
app/src/main/java/com/example/Amadeus/: Alarm.java  AlarmActivity.java  AlarmBootReceiver.java  AlarmReceiver.java  AlarmService.java  Amadeus.java  AudioRecorder.java  Http_requests.java  LangContext.java  LaunchActivity.java  MainActivity.java  OpenAiChatClient.java  RepeaterActivity.java  SenseVoiceRecognizer.java  SettingsActivity.java  VitsJaSynthesizer.kt  (+3 more)
app/src/main/res/layout/: activity_alarm.xml  activity_launch.xml  activity_main.xml  activity_repeater.xml
app/src/main/res/layout-land/: activity_launch.xml
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: preferences.xml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
